deploy/k8s/web-service-80.yaml
apiVersion: v1
kind: Service
metadata:
  name: meal-week-planner-web-service-80
  namespace: default
  labels:
    app: meal-week-planner-web
spec:
  type: NodePort
  selector:
    app: meal-week-planner-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4200
    nodePort: 30080
